version/0.15/_sources/api/ansys/health/heart/examples/index.rst.txt






The ``examples.py`` module
==========================

.. py:module:: ansys.health.heart.examples


Summary
-------








.. py:currentmodule:: examples
.. tab-set::







    .. tab-item:: Functions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~get_preprocessed_fullheart`
            - Get a preprocessed full heart model.


          * - :py:obj:`~get_input_leftventricle`
            - Get the input of a left ventricle based on Rodero et al 01.


          * - :py:obj:`~get_fractal_tree_purkinje`
            - Get the fractal tree Purkinje network based on Rodero et al 01.



    .. tab-item:: Attributes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~dir_path`
            - 


          * - :py:obj:`~data_path`
            - 
















Description
-----------

Utility functions to get various examples.

..
    !! processed by numpydoc !!






Module detail
-------------

.. py:function:: get_preprocessed_fullheart(resolution: Literal['1.5mm', '2.0mm'] = '2.0mm') -> tuple[pathlib.Path, pathlib.Path, pathlib.Path]

   
   Get a preprocessed full heart model.


   :Parameters:

       **resolution** : :obj:`Literal`\[&quot;1.5mm&quot;, &quot;2.0mm&quot;], default: "2.0mm"
           The resolution of the preprocessed full heart.



   :Returns:

       :class:`python:tuple`\[:obj:`Path`, :obj:`Path`, :obj:`Path`]
           Paths to the ``.vtu``, ``.partinfo.json``, and ``.namemap.json`` files.











   ..
       !! processed by numpydoc !!

.. py:function:: get_input_leftventricle() -> tuple[pathlib.Path, pathlib.Path]

   
   Get the input of a left ventricle based on Rodero et al 01.
















   ..
       !! processed by numpydoc !!

.. py:function:: get_fractal_tree_purkinje() -> tuple[pyvista.PolyData, pyvista.PolyData]

   
   Get the fractal tree Purkinje network based on Rodero et al 01.





   :Returns:

       :class:`python:tuple`\[:obj:`pv.PolyData`, :obj:`pv.PolyData`]
           The left and right Purkinje networks as PyVista PolyData objects.











   ..
       !! processed by numpydoc !!

.. py:data:: dir_path

.. py:data:: data_path



